Change database to sqlite

--- a/WaterLogger/appsettings.json
+++ b/WaterLogger/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WaterLoggerConnection": "Server=127.0.0.1\\SQLEXPRESS;Database=WaterLogger;Trusted_Connection=True;TrustServerCertificate=True;"
+    "WaterLoggerConnection": "Data Source=waterdb.db"
   },
   "Logging": {
     "LogLevel": {
